# python-lambda-template

./: cookiecutter.json
test/: pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}-app/{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}-app/{{cookiecutter.project_name}}/{{ cookiecutter.project_name_slug}}/: common.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}-app/{{cookiecutter.project_name}}/{{ cookiecutter.project_name_slug}}/routers/: api.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}-app/{{cookiecutter.project_name}}/{{ cookiecutter.project_name_slug}}/routers/endpoints/: health.py  swagger.py
