[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.author_full_name}}",email = "{{cookiecutter.author_email_address}}"}
]
readme = "README.md"
requires-python = ">=3.10"

# Add all the dependencies required for API
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "{{cookiecutter.project_name}}", from = "{{cookiecutter.project_name|replace('-','_')}}"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
